Part of #769: Fixate buttons and title.
 - Still goes horribly wrong if windows is too narrow

--- a/website_code/styles/frontpage.css
+++ b/website_code/styles/frontpage.css
@@ -805,7 +805,7 @@ div.ui-layout-center {
 .dashboard{
 	width:100%;
 	height: 100%;
-	overflow:auto;
+	/* overflow:auto; */
 	border-radius : 4px;
 	background:#fff;
 
