--- a/website_code/styles/xapi_dashboard.css
+++ b/website_code/styles/xapi_dashboard.css
@@ -18,7 +18,7 @@ table {
 
 .journeyData table{
   overflow-x: visible;
-  margin: auto 20px;
+  border: 0px;
 }
 
 .journeyData th{
@@ -46,6 +46,15 @@ td a{
 
 #options-div label{
     margin-right: 5px;
+    margin-bottom: 0px;
+}
+
+#options-div
+{
+    width: 100%;
+    background-color: #ededed;
+    border-radius: 4px;
+
 }
 
 .status-green{
@@ -152,10 +161,13 @@ td a{
     flex-wrap: wrap;
     margin-right: -15px;
     margin-left: -15px;
-    background-color: #ededed;
     color: #a01a13;
     padding-left:20px;
     padding-right:20px;
+}
+.dash-row input[type=text] {
+
+    width:100px;
 }
 
 .dash-col-1
@@ -182,6 +194,15 @@ th.x-dashboard-interaction {
     margin-top:4px;
 }
 
+#journeyData
+{
+    overflow: auto;
+    position: absolute;
+    top: 64px;
+    bottom: 5px;
+    left: 5px;
+    right: 5px;
+}
 .journeyData th a{
     font-family: Arial;
     color: #000;
@@ -201,7 +222,7 @@ th.x-dashboard-interaction {
 
 .unanonymous-view {
     display: none;
-    margin-top: 3px;
+    padding-top: 8px;
     margin-right: 10px;
 }
 
